# advent_of_code

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  aoc2015.opam  aoc2019.cabal  dune-project  res.txt
app/: Main.hs
lib/: dune
lib/files/: files.ml  files.mli
lib/functions/: functions.ml  functions.mli
src/: Computer.hs  Day1.hs  Day2.hs  Day3.hs  Util.hs  aoc.rs  main.rs
src/aoc/: aoc.rs  data_structures.rs
src/aoc2022/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  mod.rs
src/aoc2023/: day1.rs  day10.rs  day11.rs  day12.rs  day13.jl  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
