[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"
default-run = "advent_of_code"

[lib]
name = "aoc"
path = "src/aoc.rs"

[[bin]]
name = "day1"
path = "src/aoc2023/day1.rs"

[[bin]]
name = "day2"
path = "src/aoc2023/day2.rs"

[[bin]]
name = "day3"
path = "src/aoc2023/day3.rs"

[[bin]]
name = "day4"
path = "src/aoc2023/day4.rs"

[[bin]]
name = "day5"
path = "src/aoc2023/day5.rs"

[[bin]]
name = "day6"
path = "src/aoc2023/day6.rs"

[[bin]]
name = "day7"
path = "src/aoc2023/day7.rs"


[dependencies]
