(lang dune 3.11)

(name aoc2015)

(generate_opam_files true)

(source
 (github barneycampbell/advent_of_code))

(authors "Barney")

(maintainers "Barney")

(license LICENSE)

(documentation "")

(package
 (name aoc2015)
 (synopsis "Advent of Code 2015 using OCaml")
 (description "")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
